infra/prom_deployment.yaml
apiVersion: apps/v1
kind: Deployment
 
metadata:
  name: prometheus-deployment
  namespace: default
  labels:
    app: prometheus
 
spec:
  replicas: 1
  selector:
    matchLabels:
      app: prometheus
  template:
    metadata:
      labels:
        app: prometheus
    spec:
      serviceAccountName: monitor-service-account
      containers:
        - name: prometheus
          image: prom/prometheus:latest
          resources:
            limits:
              cpu: "1000m"     # 1 core
              memory: "1024Mi" # 1 GB
            requests:
              cpu: "500m"      # 0.5 core
              memory: "512Mi"  # 0.5 GB
          ports:
            - name: http
              protocol: TCP
              containerPort: 9090
          volumeMounts:
            - name: config
              mountPath: /etc/prometheus/
            - name: storage
              mountPath: /prometheus/
      volumes:
        - name: config
          configMap:
            name: prometheus-config-map
        - name: storage
          emptyDir: {}
