infra/todoService-clusterIP.yaml
apiVersion: v1
kind: Service
metadata:
  name: todo-service-clusterip
spec:
  selector:
    app: todo
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
