infra/todoService.yaml
apiVersion: v1
kind: Service
metadata:
  name: todo-service
spec:
  type: NodePort
  selector:
    app: todo
  ports:
    - name : todo
      protocol: TCP
      port: 8080
      targetPort: 8080
