infra/ingress-nginx.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: new-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: instance
spec:
  rules:
   - http:
      paths:
        - pathType: Prefix
          path: "/task"
          backend:
            service:
              name: todo-service
              port:
                number: 8080
        - pathType: Prefix
          path: "/metrics"
          backend:
            service:
              name: prometheus-service
              port:
                number: 8081
